--- a/index.html
+++ b/index.html
@@ -3,8 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>devacas_</title>
+    <title>devacas_ - Optimiza tus vacaciones</title>
     <meta name="description" content="Sácale el máximo partido a tus vacaciones. Convierte días sueltos en descansos significativos." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://devacas.vercel.app/" />
+    <meta property="og:title" content="devacas_ - Optimiza tus vacaciones" />
+    <meta property="og:description" content="Convierte días sueltos en descansos significativos" />
+    <meta property="og:image" content="https://devacas.vercel.app/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://devacas.vercel.app/" />
+    <meta name="twitter:title" content="devacas_ - Optimiza tus vacaciones" />
+    <meta name="twitter:description" content="Convierte días sueltos en descansos significativos" />
+    <meta name="twitter:image" content="https://devacas.vercel.app/og-image.png" />
+
+    <!-- Additional SEO -->
+    <meta name="keywords" content="vacaciones, calendario, optimización, festivos, puentes, España, planificador" />
+    <meta name="author" content="Clara Iglesias" />
+    <link rel="canonical" href="https://devacas.vercel.app/" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "devacas_",
+      "applicationCategory": "UtilitiesApplication",
+      "operatingSystem": "Web browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "EUR"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "ratingCount": "1"
+      },
+      "description": "Optimizador de vacaciones que ayuda a convertir días sueltos en descansos significativos, maximizando puentes y festivos en España.",
+      "url": "https://devacas.vercel.app/",
+      "author": {
+        "@type": "Person",
+        "name": "Clara Iglesias",
+        "url": "https://www.linkedin.com/in/claraiglesiasmarketing/"
+      },
+      "inLanguage": "es-ES",
+      "browserRequirements": "Requires JavaScript",
+      "featureList": [
+        "Optimización automática de vacaciones",
+        "Calendario interactivo",
+        "Festivos nacionales y autonómicos",
+        "Exportación a PDF",
+        "Personalización de días laborables",
+        "Detección de puentes"
+      ],
+      "screenshot": "https://devacas.vercel.app/og-image.png"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
